# riscv-os1

./: .gdbinit  .gitignore  CONTRIBUTORS  LICENSE  README.md  meson-cross-file.ini  meson.build  riscv64-virt-1mb.ld
lib/picolibc/: picolibc.specs  picolibcpp.specs
lib/picolibc/riscv64-unknown-elf/include/: picolibc.h
src/: meson.build
src/ccp/: ccp.c  ccp.h  meson.build
src/kernel/: boot.S  console_io.c  console_io.h  ecall.c  ecall.h  kernel.h  kmain.c  main.c  main.h  meson.build  plic.c  plic.h  rtc.c  rtc.h  stdio.c  stdio.h  syscall.c  syscall.h  system_control_block.c  system_control_block.h  timer.c  timer.h  trap.S  trap.c  trap.h  traps.S  traps.c  typeahead.c  typeahead.h  uart.c  uart.h
src/lib/: call_status_value.h  console_io.c  console_io.h  lib.h  meson.build  system.c  system.h  system_control_block.c  system_control_block.h
src/lib/_internal/: ecall.h
